--- a/css/sass/_media.scss
+++ b/css/sass/_media.scss
@@ -166,6 +166,14 @@
 	.site {
 		padding-top: 0;
 	}
+
+	#contact {
+		text-align: center;
+
+		h1 {
+			margin-top: 30px;
+		}
+	}
 }
 
 /*
